--- a/kode/index.html
+++ b/kode/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><Aflevering-2></title>
 </head>
 <body>
     <header>
         <h1>Signe's Musikarkiv</h1>
     </header>
     <main id="albumGrid"></main>
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
