5th commit in index

--- a/kode/index.html
+++ b/kode/index.html
@@ -45,34 +45,34 @@
     </thead>
     <tbody>
       <tr>
-        <td>Thriller</td>
-        <td>Michael Jackson</td>
-        <td>1982</td>
-        <td>Billie Jean</td>
+        <td>Purpose</td>
+        <td>Justin Bieber</td>
+        <td>2015</td>
+        <td>Sorry</td>
       </tr>
       <tr>
-        <td>Back in Black</td>
-        <td>AC/DC</td>
-        <td>1980</td>
-        <td>Hells Bells</td>
+        <td>RUBY</td>
+        <td>Jennie</td>
+        <td>2024</td>
+        <td>Handlebars</td>
       </tr>
       <tr>
-        <td>Abbey Road</td>
-        <td>The Beatles</td>
-        <td>1969</td>
-        <td>Come Together</td>
+        <td>American Teen</td>
+        <td>Khalid</td>
+        <td>2017</td>
+        <td>8TEEN</td>
       </tr>
       <tr>
-        <td>The Dark Side of the Moon</td>
-        <td>Pink Floyd</td>
-        <td>1973</td>
-        <td>Time</td>
+        <td>Life in Colour</td>
+        <td>Picture This</td>
+        <td>2021</td>
+        <td>LA House Party</td>
       </tr>
       <tr>
-        <td>Born to Run</td>
-        <td>Bruce Springsteen</td>
-        <td>1975</td>
-        <td>Thunder Road</td>
+        <td>Midnights</td>
+        <td>Taylor Swift</td>
+        <td>2023</td>
+        <td>Maroon</td>
       </tr>
     </tbody>
   </table>
