--- a/kode/index.html
+++ b/kode/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Musikarkiv</title>
-  <link rel="stylesheet" href="style.css"> <!-- Hvis du bruger den tidligere CSS-fil -->
+  <link rel="stylesheet" href="style.css"> 
   <style>
     table {
       width: 100%;
@@ -45,35 +45,89 @@
     </thead>
     <tbody>
       <tr>
-        <td>Purpose</td>
-        <td>Justin Bieber</td>
-        <td>2015</td>
-        <td>Sorry</td>
+        <td>"Greatest hits"</td>
+        <td>"ZZ-top"</td>
+        <td>1992</td>
+        <td>"Gimme all your lovin'"</td>
       </tr>
       <tr>
-        <td>RUBY</td>
-        <td>Jennie</td>
-        <td>2024</td>
-        <td>Handlebars</td>
+        <td>"Wild Cherry"</td>
+        <td>"Wild Cherry"</td>
+        <td>1976</td>
+        <td>"Play that funky music"</td>
       </tr>
       <tr>
-        <td>American Teen</td>
-        <td>Khalid</td>
-        <td>2017</td>
-        <td>8TEEN</td>
+        <td>"Meteora"</td>
+        <td>"Linkin Park"</td>
+        <td>2003</td>
+        <td>"Foreword"</td>
       </tr>
       <tr>
-        <td>Life in Colour</td>
-        <td>Picture This</td>
-        <td>2021</td>
-        <td>LA House Party</td>
+        <td>"Top Gun - Motion Picture Soundtrack"</td>
+        <td>"Various"</td>
+        <td>1989</td>
+        <td>"Danger zone"</td>
       </tr>
       <tr>
-        <td>Midnights</td>
-        <td>Taylor Swift</td>
-        <td>2023</td>
-        <td>Maroon</td>
+        <td>"Hjertestarter - Bonus Edition"</td>
+        <td>"Nephew"</td>
+        <td>2013</td>
+        <td>"Hjertestarter"</td>
       </tr>
+        <td>"USADSB"</td>
+        <td>"Nephew"</td>
+        <td>2004</td>
+        <td>"Movie klip"</td>
+      </tr>
+        <td>"Joyride"</td>
+        <td>"Roxette"</td>
+        <td>1991</td>
+        <td>"Joyride"</td>
+        <tr>
+          <td>"Slippery When Wet"</td>
+          <td>"Bon Jovi"</td>
+          <td>2010</td>
+          <td>"Let it rock"</td>
+        </tr>
+        <tr>
+          <td>"Crazy World"</td>
+          <td>"Scorpions"</td>
+          <td>1990</td>
+          <td>"Tease me please"</td>
+        </tr>
+        <tr>
+          <td>"The Razors Edge"</td>
+          <td>"AC/DC"</td>
+          <td>1990</td>
+          <td>"Thunderstruck"</td>
+        </tr>
+        <tr>
+          <td>"Electric Dreams"</td>
+          <td>"Synthwave Masters"</td>
+          <td>2022</td>
+          <td>"Neon Nights"/td>
+        </tr>
+        <tr>
+          <td>"Epic Jams"</td>
+          <td>"Groove Collective"</td>
+          <td>2021</td>
+          <td>"Funky Fusion"</td>
+        </tr>
+        <td>"Electric Symphony"</td>
+          <td>"Synthwave Legends"</td>
+          <td>2022</td>
+          <td>"Cyber Pulse"</td>
+        </tr>
+          <td>"Lost in Time"</td>
+          <td>"Timeless Echoes"</td>
+          <td>2023</td>
+          <td>"Chrono Prelude"</td>
+          <tr>
+            <td>"Summer Vibes"</td>
+            <td>"Sunset Groove"</td>
+            <td>2021</td>
+            <td>"Beach Sunset"</td>
+          </tr>
     </tbody>
   </table>
 
