8th commit in index

--- a/kode/index.html
+++ b/kode/index.html
@@ -130,6 +130,40 @@
           </tr>
     </tbody>
   </table>
+<head>
+  <body>
+    <script>
+      let button = document.createElement("button");
+      button.innerText = "Klik mig";
+      button.className = "small-button"; 
+
+      button.onclick = function() {
+          alert("Du klikkede på knappen!");
+      };
+
+      document.body.appendChild(button);
+  </script>
+  </body>
+</head>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
 <link rel="stylesheet" href="style.css">
