--- a/kode/index.html
+++ b/kode/index.html
@@ -1,168 +1,18 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Musikarkiv</title>
-  <link rel="stylesheet" href="style.css"> 
-  <style>
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-      border: 1px solid #ddd;
-    }
-    th {
-      background-color: #4a90e2;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-    tr:hover {
-      background-color: #97e0eb;
-    }
-  </style>
+  <title>Aflevering 2</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Signe's Musikarkiv</h1>
-<div id="albums"></div>
-<script src="javascript.js"></script>
+  <header>
+    <h1>Signe's Musikarkiv</h1>
+  </header>
+<button id="toggleButton">Hide Albums</button>
+<main id="albumGrid"></main>
+  <main id="albumGrid"></main>
+  <script src="javascript.js"></script>
 </body>
 </html>
-  <table>
-    <thead>
-      <tr>
-        <th>Album Titel</th>
-        <th>Artist</th>
-        <th>Udgivelsesår</th>
-        <th>Sangtitel</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>"Greatest hits"</td>
-        <td>"ZZ-top"</td>
-        <td>1992</td>
-        <td>"Gimme all your lovin'"</td>
-      </tr>
-      <tr>
-        <td>"Wild Cherry"</td>
-        <td>"Wild Cherry"</td>
-        <td>1976</td>
-        <td>"Play that funky music"</td>
-      </tr>
-      <tr>
-        <td>"Meteora"</td>
-        <td>"Linkin Park"</td>
-        <td>2003</td>
-        <td>"Foreword"</td>
-      </tr>
-      <tr>
-        <td>"Top Gun - Motion Picture Soundtrack"</td>
-        <td>"Various"</td>
-        <td>1989</td>
-        <td>"Danger zone"</td>
-      </tr>
-      <tr>
-        <td>"Hjertestarter - Bonus Edition"</td>
-        <td>"Nephew"</td>
-        <td>2013</td>
-        <td>"Hjertestarter"</td>
-      </tr>
-        <td>"USADSB"</td>
-        <td>"Nephew"</td>
-        <td>2004</td>
-        <td>"Movie klip"</td>
-      </tr>
-        <td>"Joyride"</td>
-        <td>"Roxette"</td>
-        <td>1991</td>
-        <td>"Joyride"</td>
-        <tr>
-          <td>"Slippery When Wet"</td>
-          <td>"Bon Jovi"</td>
-          <td>2010</td>
-          <td>"Let it rock"</td>
-        </tr>
-        <tr>
-          <td>"Crazy World"</td>
-          <td>"Scorpions"</td>
-          <td>1990</td>
-          <td>"Tease me please"</td>
-        </tr>
-        <tr>
-          <td>"The Razors Edge"</td>
-          <td>"AC/DC"</td>
-          <td>1990</td>
-          <td>"Thunderstruck"</td>
-        </tr>
-        <tr>
-          <td>"Electric Dreams"</td>
-          <td>"Synthwave Masters"</td>
-          <td>2022</td>
-          <td>"Neon Nights"/td>
-        </tr>
-        <tr>
-          <td>"Epic Jams"</td>
-          <td>"Groove Collective"</td>
-          <td>2021</td>
-          <td>"Funky Fusion"</td>
-        </tr>
-        <td>"Electric Symphony"</td>
-          <td>"Synthwave Legends"</td>
-          <td>2022</td>
-          <td>"Cyber Pulse"</td>
-        </tr>
-          <td>"Lost in Time"</td>
-          <td>"Timeless Echoes"</td>
-          <td>2023</td>
-          <td>"Chrono Prelude"</td>
-          <tr>
-            <td>"Summer Vibes"</td>
-            <td>"Sunset Groove"</td>
-            <td>2021</td>
-            <td>"Beach Sunset"</td>
-          </tr>
-    </tbody>
-  </table>
-<head>
-  <body>
-    <script>
-      let button = document.createElement("button");
-      button.innerText = "Klik mig";
-      button.className = "small-button"; 
-
-      button.onclick = function() {
-          alert("Du klikkede på knappen!");
-      };
-      document.body.appendChild(button);
-  </script>
-  </body>
-</head>
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-<link rel="stylesheet" href="style.css">
